# switch

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
include/switch/: switch.hpp
